25 Feb 2007 coudercd
 * fixed a segfaulting bug in code_logger().

15 Feb 2007 coudercd
 * fixed a bug occuring in pmkpc when specifying both --cflags and
   --libs options. The result is now separated but a space.

24 Dec 2006 coudercd
 * fixed codebuild bug spotted by toyd team on linux.
 * reordered pmkcfg.sh compiler detection.

08 Dec 2006 coudercd
 * fixed install_lib target in makefile generation from pmkscan.
 * removed the compatibility option -c for install for portability.

27 Nov 2006 coudercd
 * imported new hash table implementation with double linked lists.

# PMK 0.10.0 release

18 Nov 2006 coudercd
 * added in pmkscan the code to create binary install directory in
   generated makefile template.
 * support alternative assembler in pmkcfg.sh via AS variable.
 * update Makefile.pmk template to create correctly the binary install
   directory.
 * also added in pmkscan the code for install data directory creation
   in the generated makefile template.

# snapshot 20061028

22 Oct 2006 coudercd
 * added BUILD_LIB_NAME() to replace BUILD_SHLIB_NAME() as it also build
   the static library name.
 * marked BUILD_SHLIB_NAME() as obsolete.
 * fixed manual page directories for usermode install.

22 Oct 2006 coudercd
 * added support for shared library versioning.
 * library version numbers become optional.

14 Oct 2006 coudercd
 * lib checking fix was incomplete, it should be now (noticed by Phil
   aka wintellect).
 * fixed -u option of pmksetup and added a reminder in man page to
   escape double quotes.

11 Oct 2006 coudercd
 * fixed label generation for objects.
 * reimplemented instal targets for data files and man pages.
 * updated pmkcfg.sh to sync with latest changes.
 * updated scanfile to avoid unwanted template modification.
 * updated Makefile.pmk with pmkscan generated template.

10 Oct 2006 coudercd
 * reimplemented binary targets in makefile template generated by
   pmkscan to follow the same behavior as for libraries.

09 Oct 2006 coudercd